--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-       KANAK ROTUDUU
+       MANVI ROTUDUU
           <span id="name">xyz</span>
         </h1>
         <p class="two" id="greetingText">I really like your name btw!</p>
